--- a/references.bib
+++ b/references.bib
@@ -1,8 +1,87 @@
-@book{adams1995hitchhiker,
-  title={The Hitchhiker's Guide to the Galaxy},
-  author={Adams, D.},
-  isbn={9781417642595},
-  url={http://books.google.com/books?id=W-xMPgAACAAJ},
-  year={1995},
-  publisher={San Val}
+@article{Fischer,
+ author = {Fischer, Michael J. and Lynch, Nancy A. and Paterson, Michael S.},
+ title = {Impossibility of Distributed Consensus with One Faulty Process},
+ journal = {J. ACM},
+ issue_date = {April 1985},
+ volume = {32},
+ number = {2},
+ month = apr,
+ year = {1985},
+ issn = {0004-5411},
+ pages = {374--382},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/3149.214121},
+ doi = {10.1145/3149.214121},
+ acmid = {214121},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{Pease,
+ author = {Pease, M. and Shostak, R. and Lamport, L.},
+ title = {Reaching Agreement in the Presence of Faults},
+ journal = {J. ACM},
+ issue_date = {April 1980},
+ volume = {27},
+ number = {2},
+ month = apr,
+ year = {1980},
+ issn = {0004-5411},
+ pages = {228--234},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/322186.322188},
+ doi = {10.1145/322186.322188},
+ acmid = {322188},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{PaxosMadeSimple,
+ author = {Leslie Lamport},
+ title = {Paxos Made Simple},
+ issue_date = {Nov 1 2001},
+ year = {2001},
+ url = {http://research.microsoft.com/en-us/um/people/lamport/pubs/paxos-simple.pdf},
+}
+
+@inproceedings{Raft,
+ author = {Ongaro, Diego and Ousterhout, John},
+ title = {In Search of an Understandable Consensus Algorithm},
+ booktitle = {Proceedings of the 2014 USENIX Conference on USENIX Annual Technical Conference},
+ series = {USENIX ATC'14},
+ year = {2014},
+ isbn = {978-1-931971-10-2},
+ location = {Philadelphia, PA},
+ pages = {305--320},
+ numpages = {16},
+ url = {http://dl.acm.org/citation.cfm?id=2643634.2643666},
+ acmid = {2643666},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
+@article{Paxos,
+ author = {Lamport, Leslie},
+ title = {The Part-time Parliament},
+ journal = {ACM Trans. Comput. Syst.},
+ issue_date = {May 1998},
+ volume = {16},
+ number = {2},
+ month = may,
+ year = {1998},
+ issn = {0734-2071},
+ pages = {133--169},
+ numpages = {37},
+ url = {http://doi.acm.org/10.1145/279227.279229},
+ doi = {10.1145/279227.279229},
+ acmid = {279229},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {state machines, three-phase commit, voting},
+}
+
+@book{Distributed Systems,
+author = {George Coulouris, Jean Dollimore, Tim Kindberg and Gordon Blair},
+title = {Disitrbuted Systems, Concepts and Design},
+isbn = {0-13-214301-1}
 }
