--- a/04-analysis.tex
+++ b/04-analysis.tex
@@ -1,7 +1,7 @@
 \section{Analysis} % (fold)
 \label{sec:analysis}
 
-In this section we will analyze and describe our approach on implementing Raft with relation to the purpose of this project and with relation to acheive a more fault-tolerant and robust implementation.
+In this section we will analyze and describe our approach on implementing Raft with relation to the purpose of this project and with relation to achieve a more fault-tolerant and robust implementation.
 
 \subsection{Existing Raft Implementations} % (fold)
 \label{sub:existing_raft_implementations}
@@ -17,9 +17,16 @@ If a Raft implementation was needed for real usage, the solution would have been
 \subsection{Testing} % (fold)
 \label{sub:testing}
 
-In order to be able to verify that the implementation satisfies the requirements and that to ensure a higher level of robustness, the software will be throughly tested. To document requirement satisfaction, the implementation will be black-box tested on the level of acceptance and integration.
+In order to be able to verify that the implementation satisfies the requirements and that to ensure a higher level of robustness, the software will be thoroughly tested. To document requirement satisfaction, the implementation will be black-box tested on the level of acceptance and integration.
 
-In order to acheive robustness the implementation will also be white-box tested on the unit test level in order to test the behaviour of the different objects in situations and cases that are hard to foresee.
+In order to achieve robustness the implementation will also be white-box tested on the unit test level in order to test the behaviour of the different objects in situations and cases that are hard to foresee.
+
+%Hvordan kommer vi fra requirements til en implementation?
+
+%Hvordan har vi tænkt os at implementere? waterfall vs. iterativ
+
+%Hvordan vil vi verificere programmet (scenarie tests)?
+
 
 % subsection testing (end)
 
