--- a/report.tex
+++ b/report.tex
@@ -94,13 +94,14 @@
 \tableofcontents
 \include{00-preface}
 \include{01-introduction}
-\include{02-requirements}
-\include{03-analysis}
-\include{04-leader_election}
-\include{05-log_replication}
-\include{06-evaluation_tests}
-\include{07-discussion}
-\include{08-conclusion}
+\include{02-raft}
+\include{03-requirements}
+\include{04-analysis}
+\include{05-leader_election}
+\include{06-log_replication}
+\include{07-evaluation_tests}
+\include{08-discussion}
+\include{09-conclusion}
 
 \bibliography{references}{}
 \bibliographystyle{plain}
