--- a/04-analysis.tex
+++ b/04-analysis.tex
@@ -21,12 +21,20 @@ In order to be able to verify that the implementation satisfies the requirements
 
 In order to achieve robustness the implementation will also be white-box tested on the unit test level in order to test the behaviour of the different objects in situations and cases that are hard to foresee.
 
+% Vores approach til udvikling
+    % - Iterativ
+    % - Ud fra opførsel specificeret i "the raft paper" - Behaviour Driven Development
+    % - BDD:
+    %   - Behaviour ->  Faililing Test (specificatation)
+    %   - Implement until tests passes
+    %   - Refactor
+    %   - Repeat
+
 %Hvordan kommer vi fra requirements til en implementation?
 
 %Hvordan har vi tænkt os at implementere? waterfall vs. iterativ
 
 %Hvordan vil vi verificere programmet (scenarie tests)?
-
 
 % subsection testing (end)
 
