--- a/05-leader_election.tex
+++ b/05-leader_election.tex
@@ -3,7 +3,8 @@
 
 % - Theory
 % - Analysis
-% - Design
+% - Design(?)
+    %Vi har egentlig inkoorperet designet givet i Raft paper.
 % - Implementation
 
 % section leader_election (end)
