--- a/08-discussion.tex
+++ b/08-discussion.tex
@@ -6,4 +6,6 @@
 % - Hvad kunne vi gøre bedre?
 % - Future improvements?
 
+
+    %Det har været et problem at teste randomness, hvilket har været en udfordring.
 % section discussion (end)
