--- a/report.tex
+++ b/report.tex
@@ -39,6 +39,7 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{url}
+\usepackage{float}
 % ------------------------------------------------------------------------------
 % Definitions (do not change this)
 % ------------------------------------------------------------------------------
