Started on evaluation and testing section

--- a/04-analysis.tex
+++ b/04-analysis.tex
@@ -21,6 +21,23 @@ In order to be able to verify that the implementation satisfies the requirements
 
 In order to achieve robustness the implementation will also be white-box tested on the unit test level in order to test the behaviour of the different objects in situations and cases that are hard to foresee.
 
+\subsection{Our approach}
+\label{sub:our_approach}
+
+The approach used for implementing Raft has iterative with relation to the process. The Raft paper includes an informal specification~\cite[page~4]{Raft} with behaviour of the servers described by the state they are in or how to respond to requests. In order to have a more common language between the specification and the tests, the development approach Behaviour Driven Development\footnote{Originally described by Dan North in the blog post http://dannorth.net/introducing-bdd/}~\cite{bddpaper}. The Behaviour Driven approach is iterative and have been used in the report with the following steps:
+
+\begin{enumerate}
+    \item Derive behaviour from the specification and write a failing test of the given behaviour.
+    \item Write the simplest code that implements the behaviour and make the test pass.
+    \item Refactor the code
+    \item Repeat
+\end{enumerate}
+
+This is close to Test Driven Development, but with focus on writing tests that describes behaviour instead of testing methods as in unit tests.
+One important thing to make this approach work well is to derive the bevaviour that seem most easy to implement first.
+
+% subsection our_approach (end)
+
 % Vores approach til udvikling
     % - Iterativ
     % - Ud fra opførsel specificeret i "the raft paper" - Behaviour Driven Development
