--- a/report.tex
+++ b/report.tex
@@ -100,7 +100,7 @@
 \include{04-analysis}
 \include{05-leader_election}
 \include{06-log_replication}
-\include{07-evaluation_tests}
+\include{07-evaluation_testing}
 \include{08-discussion}
 \include{09-conclusion}
 
