--- a/report.tex
+++ b/report.tex
@@ -55,9 +55,7 @@
     {\centering \large \@author}}
 \makeatother
 
-\setlength\parindent{0pt} % Removes all indentation from paragraphs
-\renewcommand{\labelenumi}{\alph{enumi}.} % Make numbering in the enumerate environment by letter rather than number (e.g. section 6)
-
+% \setlength\parindent{0pt} % Removes all indentation from paragraphs
 
 \lstset{captionpos=b, basicstyle=\footnotesize, breaklines=true}
 
