Updates from ShareLaTeX

--- a/02-raft.tex
+++ b/02-raft.tex
@@ -1,4 +1,5 @@
 \section{Raft}
+\label{sec:raft}
 As of writing this report, the most recent proposal to solving the consensus problem is Raft \cite{Raft}. Diego Ongaro and John Oustershout argue that most consensus algorithms, such as Paxos \cite{Paxos} suffer from poor understandability and are hard to teach and later implement. They then introduce Raft as a simple and understandable solution to the consensus problem. 
 \subsection{Components of Raft}
 They describe Raft as having three main components, where the first two describes the behaviour of algorithm and the last describes how the algorithm ensures consensus properties.
