--- a/03-requirements.tex
+++ b/03-requirements.tex
@@ -16,13 +16,13 @@ The end product must satisfy the following functional requirements given the MoS
 \item The tool could be further extended with a visualisation of the given distributed system.
 \end{enumerate}
 \subsection{Quality requirements}
-The quality requirement of the illustration tool are inherited from the properties that are provided by the Raft algorithm.
+The quality requirements of the illustration tool are inherited from the properties that are provided by the Raft algorithm.
 	\begin{enumerate}
 	\item The Raft implementation should have the following properties: Safety, availability, timing independence, and that commands complete as soon as a majority has responded.
 		\begin{enumerate}
-		\item Safety: There must always be at most one leader in the distributed system.
+		\item Safety: The properties described in section \ref{sec:raft} about Raft.
 		\item Availability: The system should be available as long it is possible to elect a leader through a majority vote.
-		\item Timing independence: Safety should not depend on the timing of the system, i.e. the speed of a given process should provide it with an advantage in terms of the consensus of the system. For this it is specified that:
+		\item Timing independence: Safety should not depend on the timing of the system, i.e. the speed of a given process should provide it with an advantage in terms of the consensus of the system. For this, it is specified that:
 		\begin{center}
 		$broadcastTime << electionTimeout << MTBF$ \cite{Raft}.
 		\end{center}
